New branch commit

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@ Primer commit parallel
 <h3> Tercer commit realizado </h3>
 Add line in master branch
 Alex Commit
+New branch created
 </body>
 </html>
